--- a/ClientProject/LinuxClient.csproj
+++ b/ClientProject/LinuxClient.csproj
@@ -11,7 +11,7 @@
         <HintPath>..\Refs\0Harmony.dll</HintPath>
       </Reference>
       <Reference Include="Barotrauma">
-        <HintPath>..\Refs\Barotrauma.dll</HintPath>
+        <HintPath>..\Refs\Linux\Barotrauma.dll</HintPath>
       </Reference>
       <Reference Include="Farseer.NetStandard">
         <HintPath>..\Refs\Farseer.NetStandard.dll</HintPath>
