--- a/ServerProject/LinuxServer.csproj
+++ b/ServerProject/LinuxServer.csproj
@@ -37,12 +37,9 @@
     </ItemGroup>
 
     <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
+    <Import Project="../Build.props"/>
 
     <PropertyGroup>
-        <!-- IMPORTANT: Should point to <Barotrauma_Install>\LocalMods\<MyModName>\ -->
-        <!-- IMPORTANT: ModDeplyDir Path must end with '\' -->
-        <ModDeployDir>..\LUATRAMA_DEBUG_LOCALMODS_MYMODDIR\</ModDeployDir>
-        <AssemblyName>MyModName</AssemblyName>
         <RootNamespace>$(SolutionName.Replace(" ", "_"))</RootNamespace>
         <PlatformTarget>x64</PlatformTarget>
         <GenerateDocumentationFile>False</GenerateDocumentationFile>
