--- a/Assets/Assets.csproj
+++ b/Assets/Assets.csproj
@@ -22,10 +22,12 @@
     <Target Name="CopyFiles" AfterTargets="Build">
         <ItemGroup>
             <FileList Include="$(ProjectDir)filelist.xml" />
+			<Preview Include="$(ProjectDir)preview.png" />
             <RunConfig Include="$(ProjectDir)RunConfig.xml" />
             <Content Include="$(ProjectDir)Content\**\*.*" />
         </ItemGroup>
         <Copy SourceFiles="@(FileList)" DestinationFiles="$(ModDeployDir)filelist.xml" />
+		<Copy SourceFiles="@(Preview)" DestinationFiles="$(ModDeployDir)preview.png" />
         <Copy SourceFiles="@(RunConfig)" DestinationFiles="$(ModDeployDir)CSharp\RunConfig.xml" />
         <Copy SourceFiles="@(Content)" DestinationFolder="$(ModDeployDir)Content\%(RecursiveDir)" />
     </Target>
