Reverted accidental repository mixup.

--- a/Build.props
+++ b/Build.props
@@ -2,8 +2,8 @@
     <PropertyGroup>
         <!-- IMPORTANT: Should point to <Barotrauma_Install>\LocalMods\<MyModName>\ -->
         <!-- IMPORTANT: ModDeplyDir Path must end with '\' -->
-        <ModDeployDir>..\Release\</ModDeployDir>
+        <ModDeployDir>..\LUATRAMA_DEBUG_LOCALMODS_MYMODDIR\</ModDeployDir>
         <!-- IMPORTANT: Avoid the use of special (IE: / : ; , \ < > ?) (periods "." are good) and non-english characters in the AssemblyName.-->
-        <AssemblyName>HotkeyReload</AssemblyName>
+        <AssemblyName>MyModName</AssemblyName>
     </PropertyGroup>
 </Project>
