Update missing dependencies for template.
* Update LinuxClient.csproj

* Update LinuxClient.csproj

* Update OSXClient.csproj

* Update WindowsClient.csproj

* Update LinuxServer.csproj

* Update OSXServer.csproj

* Update WindowsServer.csproj

* Update OSXServer.csproj

* Update Plugin.cs

* Update README.md

* small fix

* small fix

--- a/ServerProject/WindowsServer.csproj
+++ b/ServerProject/WindowsServer.csproj
@@ -28,6 +28,9 @@
     <Reference Include="DedicatedServer">
       <HintPath>..\Refs\Windows\DedicatedServer.dll</HintPath>
     </Reference>
+    <Reference Include="BarotraumaCore">
+      <HintPath>..\Refs\Windows\BarotraumaCore.dll</HintPath>
+    </Reference>
     <Reference Include="Farseer.NetStandard">
       <HintPath>..\Refs\Farseer.NetStandard.dll</HintPath>
     </Reference>
