New Format init

--- a/Assets/Assets.csproj
+++ b/Assets/Assets.csproj
@@ -21,13 +21,9 @@
 
     <Target Name="CopyFiles" AfterTargets="Build">
         <ItemGroup>
-            <FileList Include="$(ProjectDir)filelist.xml" />
-            <RunConfig Include="$(ProjectDir)RunConfig.xml" />
             <Content Include="$(ProjectDir)Content\**\*.*" />
         </ItemGroup>
-        <Copy SourceFiles="@(FileList)" DestinationFiles="$(ModDeployDir)filelist.xml" />
-        <Copy SourceFiles="@(RunConfig)" DestinationFiles="$(ModDeployDir)CSharp\RunConfig.xml" />
-        <Copy SourceFiles="@(Content)" DestinationFolder="$(ModDeployDir)Content\%(RecursiveDir)" />
+        <Copy SourceFiles="@(Content)" DestinationFolder="$(ModDeployDir)%(RecursiveDir)" />
     </Target>
 
 
