--- a/ClientProject/LinuxClient.csproj
+++ b/ClientProject/LinuxClient.csproj
@@ -61,8 +61,8 @@
             <Assemblies Include="$(TargetDir)$(TargetName).dll" />
             <DepsFiles Include="$(TargetDir)$(TargetName).deps.json" />
         </ItemGroup>
-        <Copy SourceFiles="@(Assemblies)" DestinationFiles="$(ModDeployDir)bin\Client\Linux\$(TargetName).dll" />
-        <Copy SourceFiles="@(DepsFiles)" DestinationFiles="$(ModDeployDir)bin\Client\Linux\$(TargetName).deps.json" />
+        <Copy SourceFiles="@(Assemblies)" DestinationFiles="$(ModDeployDir)Binaries\Client\Linux\$(TargetName).dll" />
+        <Copy SourceFiles="@(DepsFiles)" DestinationFiles="$(ModDeployDir)Binaries\Client\Linux\$(TargetName).deps.json" />
     </Target>
     
 </Project>
