--- a/ServerProject/LinuxServer.csproj
+++ b/ServerProject/LinuxServer.csproj
@@ -61,8 +61,8 @@
             <Assemblies Include="$(TargetDir)$(TargetName).dll" />
             <DepsFiles Include="$(TargetDir)$(TargetName).deps.json" />
         </ItemGroup>
-        <Copy SourceFiles="@(Assemblies)" DestinationFiles="$(ModDeployDir)bin\Server\Linux\$(TargetName).dll" />
-        <Copy SourceFiles="@(DepsFiles)" DestinationFiles="$(ModDeployDir)bin\Server\Linux\$(TargetName).deps.json" />
+        <Copy SourceFiles="@(Assemblies)" DestinationFiles="$(ModDeployDir)Binaries\Server\Linux\$(TargetName).dll" />
+        <Copy SourceFiles="@(DepsFiles)" DestinationFiles="$(ModDeployDir)Binaries\Server\Linux\$(TargetName).deps.json" />
     </Target>
 
 </Project>
