--- a/ServerProject/LinuxServer.csproj
+++ b/ServerProject/LinuxServer.csproj
@@ -28,8 +28,8 @@
       <Reference Include="MonoGame.Framework.Linux.NetStandard">
         <HintPath>..\Refs\MonoGame.Framework.Linux.NetStandard.dll</HintPath>
       </Reference>
-      <Reference Include="MonoMod.Common">
-        <HintPath>..\Refs\MonoMod.Common.dll</HintPath>
+      <Reference Include="MonoMod.Utils">
+        <HintPath>..\Refs\MonoMod.Utils.dll</HintPath>
       </Reference>
       <Reference Include="MoonSharp.Interpreter">
         <HintPath>..\Refs\MoonSharp.Interpreter.dll</HintPath>
