--- a/ServerProject/WindowsServer.csproj
+++ b/ServerProject/WindowsServer.csproj
@@ -43,8 +43,8 @@
     <Reference Include="MonoGame.Framework.Windows.NetStandard">
       <HintPath>..\Refs\MonoGame.Framework.Windows.NetStandard.dll</HintPath>
     </Reference>
-    <Reference Include="MonoMod.Common">
-      <HintPath>..\Refs\MonoMod.Common.dll</HintPath>
+    <Reference Include="MonoMod.Utils">
+      <HintPath>..\Refs\MonoMod.Utils.dll</HintPath>
     </Reference>
     <Reference Include="MoonSharp.Interpreter">
       <HintPath>..\Refs\MoonSharp.Interpreter.dll</HintPath>
