--- a/ClientProject/LinuxClient.csproj
+++ b/ClientProject/LinuxClient.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -28,8 +28,8 @@
       <Reference Include="MonoGame.Framework.Linux.NetStandard">
         <HintPath>..\Refs\MonoGame.Framework.Linux.NetStandard.dll</HintPath>
       </Reference>
-      <Reference Include="MonoMod.Common">
-        <HintPath>..\Refs\MonoMod.Common.dll</HintPath>
+      <Reference Include="MonoMod.Utils">
+        <HintPath>..\Refs\MonoMod.Utils.dll</HintPath>
       </Reference>
       <Reference Include="MoonSharp.Interpreter">
         <HintPath>..\Refs\MoonSharp.Interpreter.dll</HintPath>
